--- a/themes/supersimple/layouts/partials/aside.html
+++ b/themes/supersimple/layouts/partials/aside.html
@@ -15,17 +15,17 @@
 {{/*  Carve out for 404 page  */}}
 {{/*  Wish I could do it better  */}}
 {{ if eq .Kind "404" }}
-{{/*  <p>This page couldn't be found.</p>
-<p>Try heading <a href="/">home</a>.</p>  */}}
 {{ partial "svg/slant-face.svg" . }}
 {{ end }}
 
-{{ if .Page.IsDescendant (.Site.GetPage "/projects")}}
-{{ if  eq .Page.Parent (.Site.GetPage "/projects")}}
-{{ if ne (len .Pages) 0}}
+{{/*  {{ if .Page.IsDescendant (.Site.GetPage "/projects")}}
+    {{ if  eq .Page.Parent (.Site.GetPage "/projects")}}
+        {{ if ne (len .Pages) 0}}
+            {{ partial "widgets/project-postlist.html" . }}
+        {{ end }}
+    {{ else }}
+        {{ partial "widgets/project-backlink.html" . }}
+    {{ end }}
+{{ end }}  */}}
 {{ partial "widgets/project-postlist.html" . }}
-{{ end }}
-{{ else }}
 {{ partial "widgets/project-backlink.html" . }}
-{{ end }}
-{{ end }}
