--- a/themes/supersimple/layouts/shortcodes/connect-card.html
+++ b/themes/supersimple/layouts/shortcodes/connect-card.html
@@ -8,6 +8,10 @@
         wireless technologies who thrives in fast-paced, collaborative
         environments.
       </p>
+      <a class="link-button" href="/media/resume-09-23.pdf" style="margin-right: 0.3rem;">
+        {{ partial "icon" "pdf" }}
+        <span>PDF Resume</span>
+      </a>
       <a class="link-button" href="https://www.linkedin.com/in/rohan-menon-46518415a/">
         {{ partial "icon" "linkedin" }}
         <span>LinkedIn</span>
