--- a/themes/supersimple/assets/styles/widgets.scss
+++ b/themes/supersimple/assets/styles/widgets.scss
@@ -14,10 +14,9 @@
     margin-top:3rem;
     display: block;
     padding: 1rem 1rem 0.70rem 2.5rem;
-    // transition: background-color $animation-fast;
     background-color: $c9;
 
-    border-radius: $border-radius;
+    border-radius: $border-big;
 
     .backlink-title {
         @include header-font;
@@ -42,7 +41,7 @@
 
 .project-postlist {
     margin-top:3rem;
-    border-radius: $border-radius;
+    border-radius: $border-big;
     overflow: hidden;
     .postlist-label {
         display: block;
@@ -59,9 +58,7 @@
         flex-direction: row-reverse;
         gap: 1rem;
 
-        // transition: background-color $animation-fast;
         background-color: $c9;
-
         backdrop-filter: blur(1rem);
 
         &:hover {
@@ -95,7 +92,9 @@
 
         .postlist-title {
             @include header-font;
-            font-size: 1.25rem;
+            font-size: 1.1rem;
+            line-height: 1.1;
+            margin-bottom: 0.5rem;
         }
 
     }
@@ -104,25 +103,11 @@
 .aside-link {
     display: block;
     margin: 0.3rem 0;
+    color: $c1;
 
     .aside-icon {
         font-size: 1.3em;
         margin-right: 0.2em;
         vertical-align: middle;
-        // svg { transition: fill $animation-fast }
     }
-
-    // .aside-link-text {
-    //     text-decoration: underline;
-    //     transition: color $animation-fast
-    // }
-
-    // &:hover {
-    //     .aside-icon svg {
-    //         fill: #026416 !important;
-    //     }
-    //     .aside-link-text {
-    //         color: #026416;
-    //     }
-    // }
 }
