--- a/themes/supersimple/layouts/404.html
+++ b/themes/supersimple/layouts/404.html
@@ -49,9 +49,7 @@
     {{ range where .Site.Pages ".Params.hidden" "ne" true -}}
     {
       title: "{{ .Title }}",
-      parent: "{{if .Parent}}{{ .Parent.Title }}{{end}}",
       link: "{{ .RelPermalink }}",
-      summary: "{{ partial "get-summary.html" . | plainify }}",
       image: "{{ .Params.image }}",
       date: "{{ .Date.Format "Jan 2, 2006" }}",
     },
@@ -63,7 +61,7 @@
   const results = sitelist
     .filter((item) => {
       return (
-        similarity(item.link, search) + similarity(item.title, slug) > 0.6
+        similarity(item.link, search) + similarity(item.title, slug) > 0.5
       );
     })
     .sort((a, b) => {
@@ -86,25 +84,21 @@
   } else {
   resultsDiv.innerHTML = `
   <h2>This may be what you're looking for</h2>
-    <div class="post-list">
+    <div class="list-stack">
       ${results
         .map(
           (item) => `
-        <div class="pli">
-          <a href="${item.link}" class="pli-link unstyled">
+        <div class="lsi" data-tags="" data-year="2023">
+          <a href="${item.link}" class="lsi-link unstyled" data-title="${item.title}" style="--bg-color: ">
+            <div class="lsi-text">
+              <h2 class="lsi-title">${item.title}</h2>
+              <time class="lsi-date">${item.date}</time>
+            </div>
             ${item.image && `
-            <div class="pli-img">
-              <img class="batch-load" src="${item.image}" alt="${item.title}">
+            <div class="lsi-img">
+              <img class="batch-load" src="${item.image}" alt="${item.title}" style="opacity: 1;">
             </div>
             `}
-            <div class="pli-text">
-              <time class="pli-date">${item.date}</time>
-              <div class="pli-title">
-                <div class="pli-title-parent">${item.parent}/</div>
-                <div class="pli-title-main">${item.title}</div>
-              </div>
-              <div class="pli-desc">${item.summary}</div>
-            </div>
           </a>
         </div>
       `
