--- a/themes/supersimple/assets/styles/typography.scss
+++ b/themes/supersimple/assets/styles/typography.scss
@@ -21,9 +21,9 @@
 }
 
 @font-face {
-  font-family: "HoudiniTrio";
-  src: url("/fonts/Houdini/HoudiniTrio.woff2") format("woff2"),
-    url("/fonts/Houdini/HoudiniTrio.woff") format("woff");
+  font-family: "HoudiniPixel";
+  src: url("/fonts/Houdini/HoudiniPixel.woff2") format("woff2"),
+    url("/fonts/Houdini/HoudiniPixel.woff") format("woff");
   font-weight: normal;
 }
 
