Update code colors

--- a/themes/supersimple/assets/styles/global.scss
+++ b/themes/supersimple/assets/styles/global.scss
@@ -36,28 +36,30 @@ $p7: lighten(#395e4f, 2%);
 $p8: lighten(#233b32, 3%);
 $p9: lighten(#10352a, 5%);
 
-@media (prefers-color-scheme: dark) {
-  $bg: #181818;
+$code-bg: saturate2(#161616);
 
-  $c0: #ffffff;
-  $c1: #f0f0f0;
-  $c2: #d8d8d8;
-  $c3: #c0c0c0;
-  $c4: #a8a8a8;
-  $c5: #909090;
-  $c6: #787878;
-  $c7: #606060;
-  $c8: #484848;
-  $c9: #303030;
-  $c10: #181818;
+// @media (prefers-color-scheme: dark) {
+//   $bg: #181818;
 
-  $p1: #1c352c;
-  $p2: #233b32;
-  $p3: #395e4f;
-  $p4: #51806c;
-  $p5: #66a288;
-  $p6: #83b59d;
-  $p7: #a0c8b3;
-  $p8: #bedbc9;
-  $p9: #dbeedf;
-}
+//   $c0: #ffffff;
+//   $c1: #f0f0f0;
+//   $c2: #d8d8d8;
+//   $c3: #c0c0c0;
+//   $c4: #a8a8a8;
+//   $c5: #909090;
+//   $c6: #787878;
+//   $c7: #606060;
+//   $c8: #484848;
+//   $c9: #303030;
+//   $c10: #181818;
+
+//   $p1: #1c352c;
+//   $p2: #233b32;
+//   $p3: #395e4f;
+//   $p4: #51806c;
+//   $p5: #66a288;
+//   $p6: #83b59d;
+//   $p7: #a0c8b3;
+//   $p8: #bedbc9;
+//   $p9: #dbeedf;
+// }
