--- a/themes/supersimple/assets/styles/typography.scss
+++ b/themes/supersimple/assets/styles/typography.scss
@@ -179,7 +179,7 @@ a.link-button {
     padding: 0.75rem;
     overflow: auto;
     box-sizing: border-box;
-    background-color: $c9;
+    background-color: $code-bg;
     font-size: 0.95rem;
     line-height: 1.5;
     font-family: "IBM Plex Mono", monospace;
@@ -187,7 +187,8 @@ a.link-button {
 
     &::-webkit-scrollbar-thumb {
       border-radius: 10rem;
-      border: 0.38rem solid $c9;
+      border: 0.38rem solid $code-bg;
+      background-color: #ffffff30;
   
       &:hover {
           background-color: #ffffff80;
