--- a/themes/supersimple/layouts/404.html
+++ b/themes/supersimple/layouts/404.html
@@ -12,6 +12,6 @@
     {{- end }}
   ];
 </script>
-<script src="js/404.js"></script>
+<script src="/js/404.js"></script>
 {{ partial "scripts/batch-loader" . }}
 {{- end }}
