Add ograph images

--- a/themes/supersimple/layouts/partials/head.html
+++ b/themes/supersimple/layouts/partials/head.html
@@ -37,4 +37,5 @@
     {{- end }}
     {{ $styles := resources.Get "styles/_main.scss" | resources.ToCSS (dict "outputStyle" "compressed") | fingerprint }}
     <link rel="stylesheet" href="{{ $styles.RelPermalink }}">
+    {{ template "_internal/opengraph.html" . }}
 </head>
