Add ograph previews to all posts

--- a/themes/supersimple/layouts/404.html
+++ b/themes/supersimple/layouts/404.html
@@ -6,7 +6,7 @@
     {
       title: "{{ .Title }}",
       link: "{{ .RelPermalink }}",
-      image: "{{ .Params.image }}",
+      image: "{{ (index .Params.images 0) }}",
       date: "{{ .Date.Format "Jan 2, 2006" }}",
     },
     {{- end }}
