--- a/themes/supersimple/layouts/shortcodes/featured-box.html
+++ b/themes/supersimple/layouts/shortcodes/featured-box.html
@@ -4,7 +4,7 @@
     {{ $p := $.Page.GetPage . }}
     <div class="lgi">
         <a href="{{$p.RelPermalink}}" class="lgi-link">
-            {{ if (index $p.Params.images 0) -}}
+            {{ if and ($p.Params.images) (index $p.Params.images 0) -}}
             <div class="lgi-img">
                 <img class="batch-load" src="{{ (index $p.Params.images 0) }}" alt="{{$p.Title}}">
             </div>
@@ -28,7 +28,7 @@
                 <h2 class="lsi-title">{{ $p.Title }}</h2>
                 <time class="lsi-date">{{$p.Date.Format "Jan 2, 2006"}}</time>
             </div>
-            {{ if (index $p.Params.images 0) }}
+            {{ if and $p.Params.images (index $p.Params.images 0) }}
             <div class="lsi-img">
                 <img class="batch-load" src="{{(index $p.Params.images 0)}}" alt="{{$p.Title}}">
             </div>
