--- a/themes/supersimple/layouts/partials/footer.html
+++ b/themes/supersimple/layouts/partials/footer.html
@@ -1,6 +1,10 @@
 <footer>
     <div class="footer-image">
-        {{ partial "svg/footer-1.svg" . }}
+        {{/*  Generate a random number between 1 and 3 to choose a footer  */}}
+        {{ $titleHash := add (crypto.FNV32a .RelPermalink) 1 }}
+        {{ $random := add 1 (mod (int $titleHash) 3) }}
+        {{ $footerImage := printf "svg/footer-%d.svg" $random }}
+        {{ partial $footerImage }}
     </div>
     <div class="footer-content">
         <div class="footer-col col-1">
