--- a/themes/supersimple/assets/styles/_main.scss
+++ b/themes/supersimple/assets/styles/_main.scss
@@ -8,10 +8,10 @@
 @import "./shortcodes.scss";
 
 @import "./list-grid.scss";
-// @import "./list-masonry.scss";
 @import "./list-stack.scss";
 @import "./pagination.scss";
 
+@import "./bento.scss";
 @import "./resume.scss";
 @import "./connect-card.scss";
 
