--- a/themes/supersimple/assets/styles/connect-card.scss
+++ b/themes/supersimple/assets/styles/connect-card.scss
@@ -61,6 +61,11 @@
       }
     }
   }
+  .cc-calendly {
+    width:100%;
+    border-radius: 0.5rem;
+    font-size: 1.2rem;
+  }
 }
 
 @container (max-width: 500px) {
