--- a/themes/supersimple/assets/styles/global.scss
+++ b/themes/supersimple/assets/styles/global.scss
@@ -26,6 +26,7 @@ $c8: saturate(darken(#c0c0c0, 2%));
 $c9: saturate(darken(#ececec, 2%));
 $c10: saturate(darken(#f0f0f0, 3%));
 
+$p05: #d5e8d9;
 $p1: darken(#dbeedf, 5%);
 $p2: darken(#cce7d6, 4%);
 $p3: darken(#a0c8b3, 3%);
